# raptor-stats

./: .gitignore  MANIFEST.in  Makefile  README.md  pyproject.toml  reading_test.py  t.py
docs/: conf.py  index.rst  raptorstats.rst
experiments/: antarctica.py  build_US_indices.py  compare_vs_rasterstats.py  constants.py  debugutils.py  experiment.py  experiment_aggregator.py  profile_method.py  profile_results.txt  profiling_notes.md  profiling_tools.py  raster_methods.py  reference.py  rotations.py  test_antartica.py  test_sheared.py
raptor-stats/: __init__.py  api.py  node.py  utils.py
raptorstats/: __init__.py  agg_quad_tree.py  agqt.py  api.py  debugutils.py  file_utils.py  io.py  node.py  raptor_methods.py  raster_methods.py  reference.py  scanline.py  stats.py  utils.py  zonal_stat_method.py  zone_stat_method.py
tests/: test_agqt.py  test_scanline.py  test_zonal.py  utils.py
tests/data/: US_MSR_resampled_x10.tif  cb_2018_us_state_20m_filtered_filtered.dbf  cb_2018_us_state_20m_filtered_filtered.shp  cb_2018_us_state_20m_filtered_filtered.shx  test_US_results.json  test_agqt_tree_results.json
tests/data/indices/: my_index.idx  new_index.idx  us_index.idx
