[project]
name = "raptor-stats"
version = "0.1.0"
description = "Raptor Zonal Statistics"
authors = [
    { name = "Simon Pedro Gonzalez", email = "simon.pedro.g@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "geocube>=0.7.0",
    "geopandas>=1.0.1",
    "pyzorder>=0.0.2",
    "rasterio>=1.4.3",
    "rasterstats>=0.20.0",
    "rtree>=1.4.0",
    "tqdm>=4.67.1",
    "xarray>=2025.1.1",
]

[project.optional-dependencies]
dev = [
    "line-profiler>=4.2.0",
    "memory-profiler>=0.61.0",
    "ruff>=0.11.2",
    "seaborn>=0.13.2",
    "pyqt6>=6.8.0",
    "rasterstats>=0.20.0",
    "psutil>=7.0.0",
    "matplotlib>=3.7.1",
]